# Goygoy

./: .gitignore  README.md  pyproject.toml
config/: config.yaml  prompt.yaml
frontend/: demo.html  index.html  package-lock.json  package.json
frontend/prompts/: levi_ackerman.md  light_yagami.md  monkey_d_luffy.md  naruto_uzumaki.md  sung_jinwoo.md
frontend/public/: audio-processor.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/components/: BreathTides.tsx  CodeBlock.tsx  CodeSection.tsx  ControlBar.tsx  DemoSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HeroVoiceWidget.tsx  MetricsBar.tsx  NavBar.tsx  Orb3D.tsx  OrbVisualizer.tsx  OrbVisualizerWrapper.tsx  PricingSection.tsx  ThemeToggle.tsx  TranscriptPanel.tsx  VoiceChat.tsx  WaveVisualizer.tsx  WhySection.tsx
frontend/src/components/shaders/: orbFragment.glsl.ts  orbVertex.glsl.ts
frontend/src/contexts/: SessionHistoryContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAudioPlayer.ts  useAudioRecorder.ts  useMicAmplitude.ts  useSessionHistory.ts  useVoiceChat.ts  useWebSocket.ts
frontend/src/lib/: constants.ts  defaultConfig.ts  protocol.ts
goygoy/: __init__.py  __main__.py
goygoy/core/: __init__.py  audio.py  config.py  pipeline.py  protocol.py  session.py
goygoy/engine/: __init__.py  asr.py  llm.py  tts.py  vad.py
scripts/: benchmark.py
server/: app.py
